RESOLVED FIXED261144
[GStreamer] Missing check on mapped video frame validity before pushing to compositor
https://bugs.webkit.org/show_bug.cgi?id=261144
Summary [GStreamer] Missing check on mapped video frame validity before pushing to co...
Philippe Normand
Reported 2023-09-05 04:06:21 PDT
.
Attachments
Philippe Normand
Comment 1 2023-09-05 04:10:23 PDT
EWS
Comment 2 2023-09-06 01:09:07 PDT
Committed 267663@main (9c3e31205a2d): <https://commits.webkit.org/267663@main> Reviewed commits have been landed. Closing PR #17428 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-09-06 01:10:15 PDT
Note You need to log in before you can comment on or make changes to this bug.