Cherry-pick 267663@main (9c3e31205a2d). https://bugs.webkit.org/show_bug.cgi?id=261144

[GStreamer] Missing check on mapped video frame validity before pushing to compositor
    https://bugs.webkit.org/show_bug.cgi?id=261144

    Reviewed by Xabier Rodriguez-Calvar.

    Exit early from the pushDMABufToCompositor() method if we failed to map the video frame. No need for
    a dedicated warning, there is one already in gst_video_frame_map().

    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
    (WebCore::MediaPlayerPrivateGStreamer::pushDMABufToCompositor):

    Canonical link: https://commits.webkit.org/267663@main